src/test/deca/context/valid/created/wrong_decl9.deca
//Description
//    Vérifier la decl d'attributs
//
//Résultats :
//    Erreur Syntaxique ligne 8
//


class A{
float int = 3.0;
}
