src/test/deca/context/invalid/created/wrong_decl10.deca
//Description
//    Vérifier la decl d'attributs
//
//Résultats :
//    Erreur Syntaxique ligne 8
//


class A{
boolean float = 3.0;
}
